# NeuroStrata

./: .gitignore  AGENTS.md  ARC7-REVIEW-NeuroStrata_README.md-2026-04-20.md  ARC7-REVIEW-SRTF-Training-Eval-2026-04-19.md  ARC7-REVIEW-SRTF_TEST_PLAN-2026-04-19.md  ARC7-REVIEW-self-reinforced-testing-framework-2026-04-19.md  ARC7-REVIEW-self_reinforced_testing_framework-2026-04-19.md  Cargo.toml  Cargo.toml.fixer  Dockerfile.base  KUZU_MIGRATION_HANDOFF.md  LICENSE  README.md  RULES_TEST.md  count_db.py  delete_bad_rule.py  fix_migrate.py  fix_migrate2.py  fix_namespaces.rs  install.ps1  install.sh  list_db.py  migrate.py  migrate_db.rs  patch.diff  plasticity.json  podman-compose.yml  query_memories.rs  replace_canvas.py  test  test.rs  test_cmd.js  test_file_name  test_file_name.rs  test_ladybug.rs  test_list.js  test_list_rust.rs  test_mqtt.js  tmp_plan.txt
.agents/agents/: NeuroStrata-Task-Agent.md  NeuroStrata-Task.md  neurostrata-task-agent.md  strata-task-agent.md
.agents/skills/neurostrata/: SKILL.md
.agents/skills/strata/: SKILL.md
.beads/: metadata.json
.github/workflows/: release.yml
.neuroplasticity/: neurostrata-testbed.Containerfile  rules.json
.neuroplasticity/runs/34f72c95-7e2b-4c4a-bab6-f20e15fd3b15/: epoch-1.json  epoch-2.json  epoch-3.json
.neuroplasticity/runs/5fa58a3a-533e-4bec-9b4b-26aafc7ea631/: epoch-1.json  epoch-2.json  epoch-3.json
.neuroplasticity/runs/c5a1614e-2b56-4be0-82ba-afeb4921fd30/: epoch-1.json  epoch-2.json  epoch-3.json
.neuroplasticity/runs/e51ac96d-4257-48ff-88d5-98d5b7bf4cba/: epoch-1.json
.neuroplasticity/sandbox/: Containerfile
.neurostrata/behavioral_rules.lance/_transactions/: 0-2dbb11af-4548-4ee4-989e-b67e92914340.txn  1-e312b307-7fc8-4c1f-9eb3-ecf1628e2dc4.txn  2-1e403487-d794-49eb-bed8-edf5743307c2.txn
docs/: COGNITIVE_ARCHITECTURE.md  UI_GUIDE.md
docs/architecture/: self_reinforced_testing_framework.md
docs/architecture/legacy/: fish_legacy.md  (+1 more)
kuzu_testbed/: Cargo.toml
mcp/: Cargo.toml  build.sh  canvas.go  config.go  go.mod  graphify.go  http_server.go  ingest.go  install.ps1  install.sh  log_tools.go  main.go  mcp_tools.go  qdrant.go  release.sh  rerank.go  validation.go
obsidian-strata/: main.js  main.ts  package-lock.json  package.json
plugins/claude/: install.ps1  install.sh
plugins/copilot/: install.ps1  install.sh
plugins/openclaw/: install.ps1  install.sh
plugins/opencode/: install.ps1  install.sh
schemas/v1/: plasticity.schema.json
scripts/: backup.sh  bootstrap.sh  install_hooks.sh  restore.sh  run_mock_agent.sh
src/: bin_test_mqtt.rs  config.rs  daemon.rs  embed.rs  main.rs  mqtt.rs  mqtt_worker.rs  server.rs  store.rs  traits.rs
src-tauri/: Cargo.toml  query_ids.rs  query_ns.rs  query_root.rs  query_test.rs  query_types.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/parser/: ingest.rs  mod.rs  schema.rs
src/store/: kuzu.rs  ladybug.rs  lancedb.rs  mod.rs  qdrant.rs
strata-plugin/: README.md  package-lock.json
strata-plugin/src/: index.ts
tests/srtf/: .gitignore  Containerfile  SRTF_TEST_PLAN.md  run_eval.sh  train_srtf.py
web-ui/: index.html  package-lock.json  package.json
web-ui/public/: graph.json
web-ui/src/: App.tsx  index.css  test_listen.tsx  types.ts
(+25 files in other folders)
