[package]
name = "neurostrata-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
fastembed = "4"
tracing = "0.1"
lancedb = "0.27.2"
arrow = "57.3.0"
schema = "0.1.0"
futures = "0.3.32"
dirs = "6.0.0"
rumqttd = "0.20.0"
rumqttc = "0.25.1"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
tree-sitter = "0.26.8"
ignore = "0.4.25"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
