[package]
name = "neurostrata-mcp"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "neurostrata-mcp"
path = "src/main.rs"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
fastembed = "4"
tracing = "0.1"

arrow = "57.3.0"
schema = "0.1.0"
futures = "0.3.32"
dirs = "6.0.0"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
tree-sitter = "0.26.8"
ignore = "0.4.25"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
walkdir = "2.5.0"
regex = "1.12.3"
cxx = "=1.0.138"
lbug = "0.15.3"
arrow-array = "=57.3.0"
arrow-schema = "=57.3.0"

[build-dependencies]
cxx-build = "=1.0.138"
